[Webapps]: Clear AppBannerManager::page_requested_prompt_ at start of banner flow

This CL fixes a bug where a web page is not capable of cancelling the app banner
if the tab was previously navigated to a page which requested the banner in the
beforeinstallprompt() JS handler.

BUG=688902
TEST=AppBannerManagerBrowserTest.CancelBannerAfterPromptInHandler

Review-Url: https://codereview.chromium.org/2677853002
Cr-Commit-Position: refs/heads/master@{#451689}

Former-commit-id: e082e1d1591776aff10d468bc7057dfa3e49abea